WorkspaceProyectoPDL/AnalizadorLexico/src/AnalizLex/AnalizLexParser.java
// Generated from AnalizLex.g4 by ANTLR 4.4

package AnalizLex;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AnalizLexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMA=1, PCOMA=2, APARE=3, CPARE=4, ALLAV=5, CLLAV=6, ASUMA=7, ASIG=8, 
		MAYOR=9, EQUAL=10, LOGAND=11, ASIGMOD=12, MASMAS=13, TRUE=14, FALSE=15, 
		VAR=16, INT=17, BOOL=18, CHAR=19, WRITE=20, WHILE=21, PROMPT=22, FUNCTION=23, 
		RETURN=24, IF=25, FOR=26, BREAK=27, ID=28, NUM=29, CADENA=30, COMMENT=31, 
		LINE_COMMENT=32, DEL=33;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "';'", "'('", "')'", "'{'", "'}'", "'+'", "'='", "'>'", 
		"'=='", "'&&'", "'%='", "'++'", "'true'", "'false'", "'var'", "'int'", 
		"'bool'", "'char'", "'write'", "'while'", "'prompt'", "'function'", "'return'", 
		"'if'", "'for'", "'break'", "ID", "NUM", "CADENA", "COMMENT", "LINE_COMMENT", 
		"DEL"
	};
	public static final int
		RULE_p = 0, RULE_b = 1, RULE_t = 2, RULE_f = 3, RULE_s = 4, RULE_c = 5, 
		RULE_h = 6, RULE_x = 7, RULE_a = 8, RULE_k = 9, RULE_l = 10, RULE_q = 11, 
		RULE_e = 12, RULE_r = 13, RULE_u = 14, RULE_v = 15, RULE_z = 16;
	public static final String[] ruleNames = {
		"p", "b", "t", "f", "s", "c", "h", "x", "a", "k", "l", "q", "e", "r", 
		"u", "v", "z"
	};

	@Override
	public String getGrammarFileName() { return "AnalizLex.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnalizLexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(AnalizLexParser.FUNCTION, 0); }
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public PContext p() {
			return getRuleContext(PContext.class,0);
		}
		public TerminalNode DEL() { return getToken(AnalizLexParser.DEL, 0); }
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitP(this);
		}
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p);
		try {
			setState(43);
			switch (_input.LA(1)) {
			case VAR:
			case WRITE:
			case WHILE:
			case PROMPT:
			case RETURN:
			case IF:
			case FOR:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(34); b();
				setState(35); match(DEL);
				setState(36); p();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(38); match(FUNCTION);
				setState(39); match(DEL);
				setState(40); p();
				}
				break;
			case DEL:
				enterOuterAlt(_localctx, 3);
				{
				setState(41); match(DEL);
				setState(42); p();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(AnalizLexParser.IF, 0); }
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public TerminalNode ALLAV() { return getToken(AnalizLexParser.ALLAV, 0); }
		public ZContext z(int i) {
			return getRuleContext(ZContext.class,i);
		}
		public TerminalNode CLLAV() { return getToken(AnalizLexParser.CLLAV, 0); }
		public TerminalNode WHILE() { return getToken(AnalizLexParser.WHILE, 0); }
		public List<ZContext> z() {
			return getRuleContexts(ZContext.class);
		}
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode ID() { return getToken(AnalizLexParser.ID, 0); }
		public TerminalNode VAR() { return getToken(AnalizLexParser.VAR, 0); }
		public TerminalNode CPARE() { return getToken(AnalizLexParser.CPARE, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public TerminalNode APARE() { return getToken(AnalizLexParser.APARE, 0); }
		public BContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitB(this);
		}
	}

	public final BContext b() throws RecognitionException {
		BContext _localctx = new BContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_b);
		try {
			setState(66);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(45); match(VAR);
				setState(46); t();
				setState(47); match(ID);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(49); match(IF);
				setState(50); match(APARE);
				setState(51); e(0);
				setState(52); match(CPARE);
				setState(53); s();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(55); match(WHILE);
				setState(56); match(APARE);
				setState(57); e(0);
				setState(58); match(CPARE);
				setState(59); z();
				setState(60); match(ALLAV);
				setState(61); z();
				setState(62); c();
				setState(63); match(CLLAV);
				}
				break;
			case WRITE:
			case PROMPT:
			case RETURN:
			case FOR:
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(65); s();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(AnalizLexParser.BOOL, 0); }
		public TerminalNode CHAR() { return getToken(AnalizLexParser.CHAR, 0); }
		public TerminalNode INT() { return getToken(AnalizLexParser.INT, 0); }
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitT(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_t);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << CHAR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AnalizLexParser.ID, 0); }
		public TerminalNode FUNCTION() { return getToken(AnalizLexParser.FUNCTION, 0); }
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public TerminalNode ALLAV() { return getToken(AnalizLexParser.ALLAV, 0); }
		public HContext h() {
			return getRuleContext(HContext.class,0);
		}
		public TerminalNode CPARE() { return getToken(AnalizLexParser.CPARE, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public ZContext z(int i) {
			return getRuleContext(ZContext.class,i);
		}
		public TerminalNode CLLAV() { return getToken(AnalizLexParser.CLLAV, 0); }
		public TerminalNode APARE() { return getToken(AnalizLexParser.APARE, 0); }
		public List<ZContext> z() {
			return getRuleContexts(ZContext.class);
		}
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitF(this);
		}
	}

	public final FContext f() throws RecognitionException {
		FContext _localctx = new FContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_f);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(FUNCTION);
			setState(71); h();
			setState(72); match(ID);
			setState(73); match(APARE);
			setState(74); a();
			setState(75); match(CPARE);
			setState(76); z();
			setState(77); match(ALLAV);
			setState(78); z();
			setState(79); c();
			setState(80); match(CLLAV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SContext extends ParserRuleContext {
		public List<EContext> e() {
			return getRuleContexts(EContext.class);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public TerminalNode ALLAV() { return getToken(AnalizLexParser.ALLAV, 0); }
		public TerminalNode PROMPT() { return getToken(AnalizLexParser.PROMPT, 0); }
		public List<TerminalNode> PCOMA() { return getTokens(AnalizLexParser.PCOMA); }
		public TerminalNode ASIG() { return getToken(AnalizLexParser.ASIG, 0); }
		public TerminalNode WRITE() { return getToken(AnalizLexParser.WRITE, 0); }
		public TerminalNode FOR() { return getToken(AnalizLexParser.FOR, 0); }
		public TerminalNode CLLAV() { return getToken(AnalizLexParser.CLLAV, 0); }
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public EContext e(int i) {
			return getRuleContext(EContext.class,i);
		}
		public TerminalNode ID() { return getToken(AnalizLexParser.ID, 0); }
		public TerminalNode RETURN() { return getToken(AnalizLexParser.RETURN, 0); }
		public TerminalNode CPARE() { return getToken(AnalizLexParser.CPARE, 0); }
		public TerminalNode PCOMA(int i) {
			return getToken(AnalizLexParser.PCOMA, i);
		}
		public TerminalNode APARE() { return getToken(AnalizLexParser.APARE, 0); }
		public TerminalNode ASIGMOD() { return getToken(AnalizLexParser.ASIGMOD, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_s);
		try {
			setState(117);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); match(ID);
				setState(83); match(ASIG);
				setState(84); e(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); match(RETURN);
				setState(86); x();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87); match(ID);
				setState(88); match(APARE);
				setState(89); l();
				setState(90); match(CPARE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92); match(WRITE);
				setState(93); match(APARE);
				setState(94); l();
				setState(95); match(CPARE);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97); match(PROMPT);
				setState(98); match(APARE);
				setState(99); match(ID);
				setState(100); match(CPARE);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(101); match(ID);
				setState(102); match(ASIGMOD);
				setState(103); e(0);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(104); match(FOR);
				setState(105); match(APARE);
				setState(106); match(ID);
				setState(107); match(PCOMA);
				setState(108); e(0);
				setState(109); match(PCOMA);
				setState(110); e(0);
				setState(111); match(PCOMA);
				setState(112); match(CPARE);
				setState(113); match(ALLAV);
				setState(114); e(0);
				setState(115); match(CLLAV);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CContext extends ParserRuleContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public ZContext z() {
			return getRuleContext(ZContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitC(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_c);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case VAR:
			case WRITE:
			case WHILE:
			case PROMPT:
			case RETURN:
			case IF:
			case FOR:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); b();
				setState(120); z();
				setState(121); c();
				}
				break;
			case CLLAV:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HContext extends ParserRuleContext {
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public HContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_h; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterH(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitH(this);
		}
	}

	public final HContext h() throws RecognitionException {
		HContext _localctx = new HContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_h);
		try {
			setState(128);
			switch (_input.LA(1)) {
			case INT:
			case BOOL:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(126); t();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XContext extends ParserRuleContext {
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public XContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_x; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterX(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitX(this);
		}
	}

	public final XContext x() throws RecognitionException {
		XContext _localctx = new XContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_x);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case APARE:
			case MASMAS:
			case INT:
			case ID:
			case CADENA:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); e(0);
				}
				break;
			case DEL:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AContext extends ParserRuleContext {
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode ID() { return getToken(AnalizLexParser.ID, 0); }
		public KContext k() {
			return getRuleContext(KContext.class,0);
		}
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitA(this);
		}
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_a);
		try {
			setState(139);
			switch (_input.LA(1)) {
			case INT:
			case BOOL:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(134); t();
				setState(135); match(ID);
				setState(136); k();
				}
				break;
			case CPARE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KContext extends ParserRuleContext {
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode ID() { return getToken(AnalizLexParser.ID, 0); }
		public KContext k() {
			return getRuleContext(KContext.class,0);
		}
		public TerminalNode COMA() { return getToken(AnalizLexParser.COMA, 0); }
		public KContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_k; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterK(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitK(this);
		}
	}

	public final KContext k() throws RecognitionException {
		KContext _localctx = new KContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_k);
		try {
			setState(147);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(141); match(COMA);
				setState(142); t();
				setState(143); match(ID);
				setState(144); k();
				}
				break;
			case CPARE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LContext extends ParserRuleContext {
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public QContext q() {
			return getRuleContext(QContext.class,0);
		}
		public LContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitL(this);
		}
	}

	public final LContext l() throws RecognitionException {
		LContext _localctx = new LContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_l);
		try {
			setState(153);
			switch (_input.LA(1)) {
			case APARE:
			case MASMAS:
			case INT:
			case ID:
			case CADENA:
				enterOuterAlt(_localctx, 1);
				{
				setState(149); e(0);
				setState(150); q();
				}
				break;
			case CPARE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QContext extends ParserRuleContext {
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public QContext q() {
			return getRuleContext(QContext.class,0);
		}
		public TerminalNode COMA() { return getToken(AnalizLexParser.COMA, 0); }
		public QContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_q; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterQ(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitQ(this);
		}
	}

	public final QContext q() throws RecognitionException {
		QContext _localctx = new QContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_q);
		try {
			setState(160);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(155); match(COMA);
				setState(156); e(0);
				setState(157); q();
				}
				break;
			case CPARE:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EContext extends ParserRuleContext {
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public TerminalNode LOGAND() { return getToken(AnalizLexParser.LOGAND, 0); }
		public EContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_e; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitE(this);
		}
	}

	public final EContext e() throws RecognitionException {
		return e(0);
	}

	private EContext e(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		EContext _localctx = new EContext(_ctx, _parentState);
		EContext _prevctx = _localctx;
		int _startState = 24;
		enterRecursionRule(_localctx, 24, RULE_e, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(163); r(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(170);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new EContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_e);
					setState(165);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(166); match(LOGAND);
					setState(167); r(0);
					}
					} 
				}
				setState(172);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class RContext extends ParserRuleContext {
		public RContext r() {
			return getRuleContext(RContext.class,0);
		}
		public TerminalNode MAYOR() { return getToken(AnalizLexParser.MAYOR, 0); }
		public UContext u() {
			return getRuleContext(UContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizLexListener ) ((AnalizLexListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		return r(0);
	}

	private RContext r(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RContext _localctx = new RContext(_ctx, _parentState);
		RContext _prevctx = _localctx;
		int _startState = 26;
		enterRecursionRule(_localctx, 26, RULE_r, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(174); u(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(181);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_r);
					setState(176);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(177); match(MAYOR);
					setState(178); u(0);
					}
					} 
				}
				setState(183);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
